--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
   ],
   "dependencies": {
     "angular": "^1.5.5",
-    "angular-route": "^1.5.5"
+    "angular-route": "^1.5.5",
+    "velocity": "^1.2.3",
+    "angular-animate": "^1.5.5"
   }
 }
